--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
     </div>
 
     <div id="about-container" class="component">
-        <div>
-            <span class="sub-heading-blue">ABOUT US</span>
+        <div class="about-heading">
+            <span class="sub-heading-blue">ABOUT<br>US</span>
             <img class="about-img" src="./Dilyn (Web Layout)/Main Page/jpg & png/2. About Us/Boy-&-Girl-Vector.png"
                 alt="about us img">
         </div>
-        <div>
+        <div class="about-content">
             <p>We work together to design, create and produce work that we are proud of.
             </p>
             <p>
@@ -79,7 +79,7 @@
         </div>
     </div>
 
-    <div id="portfolio-container" class="component">
+    <div id="portfolio-container" class="component sub-heading-white">
         PORTFOLIO
     </div>
 
@@ -140,7 +140,7 @@
     <div id="customer-container" class="component">
         <img class="quotation-img"
             src="./Dilyn (Web Layout)/Main Page/jpg & png/5. Customer's Review/Quotation-Mark.png" alt="quotation img">
-        <div class="sub-heading-white" style="margin-bottom: 30px;">CUSTOMER'S REVIEW</div>
+        <div class="sub-heading-white" style="margin-bottom: 30px;">CUSTOMER'S<br>REVIEW</div>
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
@@ -200,16 +200,15 @@
 
     <div id="contact-top-container" class="component">
         <div class="contact-left-column">
-            <span class="sub-heading-blue">CONTACT US</span>
-            <form class="form-container" target="_blank" action="https://formsubmit.co/dilyn.tech.indonesia@gmail.com"
-                method="POST">
+            <span class="sub-heading-blue">CONTACT<br>US</span>
+            <form class="form-container" action="https://formsubmit.co/855a1b76c9022acd6de8b29848ed1916" method="POST">
                 <input type="text" placeholder="First Name*" name="First Name" required>
                 <input type="text" placeholder="Last Name" name="Last Name">
                 <input type="text" placeholder="Company Name" name="Company">
                 <input type="email" placeholder="Email*" name="Email" required>
                 <textarea rows="4" cols="50" name="message" placeholder="Enter Message" name="Message"
                     required></textarea>
-                <button type="submit">Submit Email</button>
+                <button type="submit" class="contact-submit">Submit Email</button>
             </form>
         </div>
         <div class="contact-right-column">
