--- a/index.html
+++ b/index.html
@@ -84,15 +84,23 @@
         </div>
     </div>
 
-    <div id="portfolio-container" class="component sub-heading-white">
-        PORTFOLIO
+    <div id="portfolio-container" class="component">
+        <div class="sub-heading-white" style="margin-bottom: 30px;">OUR<br>CLIENTS</div>
+        <div class="client-img-container">
+            <img class="client-img" src="./gallery/Heparen-Dark-Blue.png" alt="heparen logo">
+        </div>
+        <div class="client-img-container">
+            <img class="client-img" src="./gallery/Pt. GRESIK JASATAMA-04.png" alt="">
+        </div>
     </div>
 
     <div id="pricing-container" class="component">
         <span class="sub-heading-blue">PRICING</span>
         <div class="price-card-container">
             <div class="price-card">
-                <h4>BASIC</h4>
+                <div>
+                    <h4>BASIC</h4>
+                </div>
                 <div class="benefit-text">
                     <p><span class="tick-mark">&#10003;</span>Free Domain</p>
                     <p><span class="tick-mark">&#10003;</span>1 Page</p>
@@ -102,9 +110,11 @@
                     <p><span class="cross-mark">&#10060;</span>Responsive Web</p>
                     <p><span class="cross-mark">&#10060;</span>Animation</p>
                 </div>
-                <span>IDR 8.000.000</span>
-                <div class="price-amount">
-                    IDR 4.000.000
+                <div>
+                    <span>IDR 8.000.000</span>
+                    <div class="price-amount">
+                        IDR 4.000.000
+                    </div>
                 </div>
             </div>
             <div class="price-card">
