--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img class="client-img" src="./gallery/Heparen-Dark-Blue.png" alt="heparen logo">
         </div>
         <div class="client-img-container">
-            <img class="client-img" src="./gallery/Pt. GRESIK JASATAMA-04.png" alt="">
+            <img class="client-img" src="./gallery/Pt. GRESIK JASATAMA-04.png" alt="GJT logo">
         </div>
     </div>
 
@@ -118,7 +118,9 @@
                 </div>
             </div>
             <div class="price-card">
-                <h4>STANDARD</h4>
+                <div>
+                    <h4>STANDARD</h4>
+                </div>
                 <div class="benefit-text">
                     <p><span class="tick-mark">&#10003;</span>Free Domain</p>
                     <p><span class="tick-mark">&#10003;</span>Up To 5 Pages</p>
@@ -128,13 +130,17 @@
                     <p><span class="tick-mark">&#10003;</span>Responsive Web</p>
                     <p><span class="tick-mark">&#10003;</span>Animation</p>
                 </div>
-                <span>IDR 10.000.000</span>
-                <div class="price-amount">
-                    IDR 5.000.000
+                <div>
+                    <span>IDR 10.000.000</span>
+                    <div class="price-amount">
+                        IDR 5.000.000
+                    </div>
                 </div>
             </div>
             <div class="price-card">
-                <h4>E-COMMERCE</h4>
+                <div>
+                    <h4>E-COMMERCE</h4>
+                </div>
                 <div class="benefit-text">
                     <p><span class="tick-mark">&#10003;</span>Free Domain</p>
                     <p><span class="tick-mark">&#10003;</span>Up To 10 Pages</p>
@@ -144,9 +150,11 @@
                     <p><span class="tick-mark">&#10003;</span>Responsive Web</p>
                     <p><span class="tick-mark">&#10003;</span>Animation</p>
                 </div>
-                <span>IDR 20.000.000</span>
-                <div class="price-amount">
-                    IDR 15.000.000
+                <div>
+                    <span>IDR 20.000.000</span>
+                    <div class="price-amount">
+                        IDR 15.000.000
+                    </div>
                 </div>
             </div>
         </div>
