--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg p-0" id="navbar-top-container">
-        <div class="container-fluid navigation-container">
+        <div class="navigation-container container-fluid">
             <div>
                 <a class="navbar-brand" href="#">
                     <img src="./Dilyn (Web Layout)/Main Page/jpg & png/1. Home/Dilyn Logo (white).png" alt="Dilyn logo">
@@ -58,9 +58,9 @@
     </div>
 
     <div class="about-top-container component">
-        <span class="sub-heading-blue">ABOUT<br>US</span><br>
         <div id="about-container">
-            <div class="about-heading">
+            <div>
+                <span class="sub-heading-blue">ABOUT<br>US</span><br>
                 <img class="about-img" src="./Dilyn (Web Layout)/Main Page/jpg & png/2. About Us/Boy-&-Girl-Vector.png"
                     alt="about us img">
             </div>
@@ -95,7 +95,7 @@
     </div>
 
     <div id="pricing-container" class="component">
-        <span class="sub-heading-blue">PRICING</span>
+        <span class="sub-heading-blue pricing-title">PRICING</span>
         <div class="price-card-container">
             <div class="price-card">
                 <div>
@@ -240,7 +240,9 @@
                 <a target="_blank"
                     href="https://wa.me/628118201995?text=I'm%20interested%20in%20your%20website%20service"><img
                         src="./Dilyn (Web Layout)/Main Page/jpg & png/6. Contact Us/WA-Button.png" alt="WA Logo"></a>
-                <img src="./Dilyn (Web Layout)/Main Page/jpg & png/6. Contact Us/E-mail-Button.png" alt="email logo">
+                <a href="mailto:dilyn.tech.indonesia@gmail.com"><img
+                        src="./Dilyn (Web Layout)/Main Page/jpg & png/6. Contact Us/E-mail-Button.png"
+                        alt="email logo"></a>
             </div>
             <div class="contact-info">
                 <h5>INSTAGRAM</h5>
@@ -264,13 +266,16 @@
                     alt="Dilyn logo">
             </div>
             <div class="quick-links-container">
-                <h6>Quick Links</h6>
                 <div class="footer-social-media">
-                    <img src="./Dilyn (Web Layout)/Main Page/jpg & png/7. Quick Links/IG-Icon.png" alt="IG Icon">
-                    <a href="https://wa.me/628118201995?text=I'm%20interested%20in%20your%20website%20service"><img
-                            src="./Dilyn (Web Layout)/Main Page/jpg & png/7. Quick Links/WA-Icon.png"
-                            alt=" WA Icon"></a>
-                    <img src="./Dilyn (Web Layout)/Main Page/jpg & png/7. Quick Links/E-mail-Icon.png" alt="Email Icon">
+                    <h6>Quick Links</h6>
+                    <div class="footer-social-container">
+                        <img src="./Dilyn (Web Layout)/Main Page/jpg & png/7. Quick Links/IG-Icon.png" alt="IG Icon">
+                        <a href="https://wa.me/628118201995?text=I'm%20interested%20in%20your%20website%20service"><img
+                                src="./Dilyn (Web Layout)/Main Page/jpg & png/7. Quick Links/WA-Icon.png"
+                                alt=" WA Icon"></a>
+                        <img src="./Dilyn (Web Layout)/Main Page/jpg & png/7. Quick Links/E-mail-Icon.png"
+                            alt="Email Icon">
+                    </div>
                 </div>
                 <div class="quick-links-inside-container">
                     <div class="quick-links">
